<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GivingFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="260dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="ways_togive"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:id="@+id/card1"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp"
        app:cardBackgroundColor="@color/light_gray"
        >


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="DuplicateIds">



            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eft_banking_details"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp"
        app:cardBackgroundColor="@color/light_gray">


        <LinearLayout
            android:id="@+id/llayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/otherdetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instant_transfer"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textStyle="italic"
        android:text="@string/tip" />

    <Button
        android:id="@+id/button"
        android:layout_width="107sp"
        android:layout_height="76sp"
        android:text="Donate Now"
        android:textColor="@color/blue" />


</LinearLayout>